Change headers from Map<Str, List<Str>> to Map<Str, Str> according to #130